--- a/package.json
+++ b/package.json
@@ -29,16 +29,24 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "9.2.4",
     "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.2",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
     "@angular/forms": "^9.1.0",
+    "@angular/material": "^9.2.2",
+    "@angular/material-moment-adapter": "^9.2.2",
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "@nrwl/angular": "9.2.4",
+    "angular-in-memory-web-api": "^0.10.0",
+    "angular2-notifications": "^9.0.0",
     "core-js": "^2.5.4",
+    "material-design-icons": "^3.0.1",
+    "ngx-take-until-destroy": "^5.4.0",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "zone.js": "^0.10.2"
   },
@@ -57,6 +65,8 @@
     "@angular-devkit/build-angular": "0.901.0",
     "codelyzer": "~5.0.1",
     "jest-preset-angular": "8.1.2",
+    "simplebar": "^5.1.0",
+    "simplebar-angular": "^2.1.0",
     "@nrwl/jest": "9.2.4",
     "jest": "25.2.3",
     "@types/jest": "25.1.4",
